# ViewTrendsSL

./: package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  pytest.ini  save_openapi.py  setup.cfg
backend/.openapi-generator/: FILES
backend/alembic/: env.py
backend/alembic/versions/: 0436d98b56e7_create_channels_table.py  71edbd983ab2_rename_username_to_full_name.py  76019bb58b15_create_videos_table.py  7691568718ce_remove_unique_constraint_from_full_name_.py  be42e1e2811c_create_predictions_tables.py  d2d9d9bb4916_add_video_source_type_enum_and_source_.py  db4ae8e69b10_remove_unique_constraint_on_channel_id_.py  e5db52325266_remove_unique_constraint_on_full_name.py  e6877fab23ae_add_channeltype_enum_and_modify_channel_.py  e88a614d8d0d_convert_video_source_type_enum_to_.py  f7c8596ddc02_initial_migration.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  channels.py  predictions.py  router.py  users.py  videos.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/mappers/: youtube_mapper.py
backend/app/ml/models/: hybrid_30d_all.joblib  hybrid_30d_short.joblib  hybrid_7d_short.joblib
backend/app/models/: __init__.py  channel.py  prediction.py  user.py  video.py
backend/app/schemas/: __init__.py  channel.py  orchestrator.py  prediction.py  user.py  video.py
backend/app/services/: __init__.py  channel_service.py  forecasting_orchestrator_service.py  ml_service.py  oauth_service.py  prediction_service.py  thumbnail_service.py  user_service.py  video_service.py  youtube_client.py  youtube_service.py
backend/src/openapi_server/: main.py
backend/src/openapi_server/apis/: analytics_api.py  analytics_api_base.py  authentication_api.py  authentication_api_base.py  channels_api.py  channels_api_base.py  history_api.py  history_api_base.py  miscellaneous_api.py  miscellaneous_api_base.py  notifications_api.py  notifications_api_base.py  predictions_api.py  predictions_api_base.py  users_api.py  users_api_base.py
backend/src/openapi_server/models/: analytics_accuracy_over_time_get200_response.py  (+122 more)
backend/tests/: conftest.py  test_analytics_api.py  test_authentication_api.py  test_channels_api.py  test_history_api.py  test_miscellaneous_api.py  test_notifications_api.py  test_predictions_api.py  test_users_api.py
backend/tests/api/: test_auth.py  test_channels.py  test_prediction_combined_endpoint.py  test_predictions.py  test_users.py  test_videos.py
backend/tests/integration/: test_thumbnail_integration.py  test_youtube_api.py
backend/tests/service/: test_thumbnails.py  test_user_service.py  test_youtube_service.py
(+116 files in other folders)
