[project]
name = "viewtrendssl"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Sanjula",email = "kevinxsanjula@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.118.2,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic[email] (>=2.12.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "rsa (>=4.9.1,<5.0.0)",
    "authlib (>=1.6.5,<2.0.0)",
    "google-auth (>=2.41.1,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.184.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
ruff = "^0.14.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"

